Fix position of features window on tablets (#1479)

--- a/contribs/gmf/less/displayqueries.less
+++ b/contribs/gmf/less/displayqueries.less
@@ -7,7 +7,7 @@
   margin-left: -@displayqueries-tablet-width / 2;
   right: @app-margin + @map-tools-size + @app-margin;
   left: initial;
-  bottom: 3.5 * @app-margin;
+  bottom: @app-margin;
   max-height: 10 * @map-tools-size;
   position: fixed;
   z-index: @above-menus-index;
